data/all_generated_tests/raw_wast_tests/block_UnreachableCodeExecution_2014.wast
;; 5. **Test Description**: Compose a block with a branching structure where certain conditions within the block lead to an `unreachable` instruction. Include specific value stack operations to ensure that the `br_if` instruction avoids the `unreachable` when conditions are met.

(assert_invalid
  (module (func $type-unreachable-block (result i32)
    (block (result i32)
      (i32.const 1)
      (br_if 0 (i32.const 0))
      (unreachable)
    )
  ))
  "type mismatch"
)